# args-me-model

./: .buildinfo  README.md  development.html  genindex.html  index.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js
.doctrees/: development.doctree  environment.pickle  index.doctree
.doctrees/_autosummary/: args_me_model.Claim.doctree  args_me_model.Source.doctree  args_me_model.Support.doctree
.github/workflows/: documentation.yml  publish.yml  test.yml
_autosummary/: args_me_model.Claim.html  args_me_model.Source.html  args_me_model.Support.html
_sources/: index.rst.txt
_sources/_autosummary/: args_me_model.Claim.rst.txt  args_me_model.Source.rst.txt  args_me_model.Support.rst.txt
docs/: conf.py  development.md  index.rst  requirements.txt
src/args_me_model/: __init__.py  argument.py  claim.py  claim_id.py  source.py  support.py
tests/: example-minimal.json  example-minimal.ndjson  test.py
